--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     image: mongo
   basketdb:
     image: redis:alpine
+  discountdb:
+    image: postgres
+  pgadmin:
+    image: dpage/pgadmin4
   portainer:
     image: portainer/portainer-ce
 
@@ -19,7 +23,16 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.Api/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Api/Dockerfile
+
 volumes:
   mongo_data: 
   portainer_data:
+  postgres_data:
+  pgadmin_data:
+
 
