--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -63,10 +63,11 @@ services:
       - "8000:80"
 
   basket.api:
-    container_name: basket.api
+    container_name: basket.api 
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
+      - "GrpcSettings:DiscountUrl=http://discount.grpc"
     depends_on:
       - basketdb
     ports:
@@ -83,4 +84,13 @@ services:
       - "8002:80"
       
 
+
+
+  discount.grpc:
+    container_name: discount.grpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString:Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234"
+    ports:
+      - "8003:80"
 
