--- a/Ordering.Infrastructure/Ordering.Infrastructure.csproj
+++ b/Ordering.Infrastructure/Ordering.Infrastructure.csproj
@@ -10,4 +10,15 @@
     <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mail\" />
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
+  </ItemGroup>
+
 </Project>
