--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -27,6 +27,15 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+  orderdb:
+    container_name: orderdb
+    environment:
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
+    restart: always
+    ports:
+        - "1433:1433"
+        
 
 
   pgadmin:
@@ -93,4 +102,15 @@ services:
       - "DatabaseSettings:ConnectionString:Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234"
     ports:
       - "8003:80"
+
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ConnectionString:OrderingConnectionString=Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;Encrypt=False;" 
+    depends_on:
+       - orderdb
+    ports:
+      - "80"
 
