--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -114,6 +114,18 @@ services:
 
 
   
+  ocelotapigw:
+    container_name: ocelotapigw
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+       - catalog.api
+       - basket.api
+       - discount.api
+       - ordering.api
+    ports:
+      - "8010:80"
+
 networks:
   default:
     driver: bridge
